--- a/styles.css
+++ b/styles.css
@@ -124,8 +124,8 @@ nav>ul>li{
   z-index: -1;
 }
 #stuff-1, #stuff-2, #stuff-3{
-  width: 50;
-  height: 50;
+  width: 50; 
+  height: 50; 
 }
 #stuff-2{
   position: relative;
@@ -263,7 +263,8 @@ footer{
   font-size: 0.8em;
   position: relative;
   top: -10px;
-  margin-top: -4px;
+  margin-top: -5px;
+  padding-top: 5px;
   background-color: #f0eee1;
 }
 #footer-nav>ul{
@@ -323,7 +324,7 @@ footer{
   text-align: right;
   padding-bottom: 20px;
   font-size: 0.8em;
-  margin-top: -10px;
+  margin-top: -11px;
   background-color: #f0eee1;
 }
 #footer-nav>ul{
